GH-412 Remove panda sdk and expiringmap (#430)
* Remove panda stk and expiringmap

* Downgrade java to 11 for JDA.

* Bump minestom example to java 21.

* Bump minestom example dependency.

* Update Minestom

Change repository and update Minestom to J21

* Fix merge

---------

Co-authored-by: KermanIsPretty <46640204+KermanIsPretty@users.noreply.github.com>